# CreditGuard

./: README.md  pyproject.toml
backend/: calculo_risco.py  clientes_fakes.py  validacao_inicial.py
backend/core/: settings.py
